--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Como surgiu o mascote Android ?</title>
         <link rel="shortcut icon" href="Favicon/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="Css/style.css">
     </head>
     <bod>
         
